--- a/event.html
+++ b/event.html
@@ -14,7 +14,7 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse inventore magni porro ullam voluptates sit! Optio consequatur dolorem, id excepturi temporibus ullam, quibusdam hic laborum, officiis ipsum quos quo aliquam! Molestiae exercitationem quo voluptatum id obcaecati quam delectus, ut error, saepe nesciunt dolore consectetur culpa distinctio. Reprehenderit obcaecati eveniet, nam omnis placeat vel dolor quo ut facilis, voluptas animi ipsum assumenda? Enim assumenda reprehenderit ratione voluptates praesentium adipisci dolorum, sequi, fugit quod facilis aliquid inventore at, obcaecati quo? Recusandae perferendis explicabo ipsum reiciendis itaque obcaecati incidunt molestiae harum beatae adipisci! Neque, dolorem perferendis rerum quisquam tempora recusandae natus molestias deserunt.
 </p>
 <center>
-<img src="event1.png">
+<img src="">
 <H1>PHOTO GALLERY</H1>
 <h2>free entry | free food | pets are not allowed</h2>
 <p>
@@ -23,7 +23,7 @@
 
 </center>
 <center>
-    <img src="event2.png">
+    <img src="file:///C:/Users/paras/OneDrive/Desktop/perfume/index.html">
     <h1>
        <a href="https://www.myntra.com/">fashion store</a>
 <h1>
@@ -35,4 +35,5 @@
 <h3>elakkiyaranjith2007@gmail.com</h3>
 </center>
     </body>
+
 </html>
